k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgtm
  namespace: lgtm
spec:
  selector:
    app: lgtm
  ports:
    - port: 3000
      targetPort: 3000
